Update images, ability to show
removing .jpg

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             justify-content: center;
             overflow: hidden;
             margin-top: 0;
-            background: url('shadow-male-showing-muscles.jpg') 55% center / contain no-repeat;
+            background: url('shadow-male-showing-muscles') 55% center / contain no-repeat;
             opacity: 0;
             transform: scale(1.05);
             transition: opacity 1.2s cubic-bezier(0.4, 0, 0.2, 1), transform 1.2s cubic-bezier(0.4, 0, 0.2, 1);
@@ -98,7 +98,7 @@
             right: 0;
             width: 20%;
             height: 100%;
-            background: url('muscular-man-doing-weightlifting-fitness-center.jpg') center 30% / contain no-repeat;
+            background: url('muscular-man-doing-weightlifting-fitness-center') center 30% / contain no-repeat;
             opacity: 0.6;
             pointer-events: none;
             z-index: 1;
@@ -110,7 +110,7 @@
             left: 0%;
             width: 30%;
             height: 80%;
-            background: url('black-white-photo-muscular-build-man-using-sports-chalk-while-before-lifting-barbell-weight-training-gym.jpg') 10% 90% / 100% no-repeat;
+            background: url('black-white-photo-muscular-build-man-using-sports-chalk-while-before-lifting-barbell-weight-training-gym') 10% 90% / 100% no-repeat;
             mask-image: radial-gradient(ellipse at center top, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%);
             -webkit-mask-image: radial-gradient(ellipse at center top, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%);
             mask-size: 100% 100%;
@@ -157,7 +157,7 @@
                 height: 70vh;
                 align-items: center;
                 transform: translateY(0);
-                background: url('shadow-male-showing-muscles.jpg') center center / 70% no-repeat;
+                background: url('shadow-male-showing-muscles') center center / 70% no-repeat;
             }
 
             .site-title {
@@ -1034,5 +1034,6 @@
         });
     </script>
 </body>
+
 
 </html>
