--- a/index.html
+++ b/index.html
@@ -798,9 +798,9 @@
 
     <div class="menu-overlay" id="menuOverlay"></div>
     <div class="hamburger-menu" id="hamburgerMenu">
-        <a href="/who.html" class="menu-item">who</a>
-        <a href="/what.html" class="menu-item">what</a>
-        <a href="/why.html" class="menu-item">why</a>
+        <a href="WHO.html" class="menu-item">who</a>
+        <a href="WHAT.html" class="menu-item">what</a>
+        <a href="WHY.html" class="menu-item">why</a>
     </div>
     <div class="site-title">WEIGHTLISTED</div>
     <div class="slogan">your vision, our code</div>
@@ -973,4 +973,5 @@
 </body>
 
 </html>
+
 
