--- a/index.html
+++ b/index.html
@@ -799,8 +799,8 @@
     <div class="menu-overlay" id="menuOverlay"></div>
     <div class="hamburger-menu" id="hamburgerMenu">
         <a href="WHO.html" class="menu-item">who</a>
-        <a href="WHAT.html" class="menu-item">what</a>
-        <a href="WHY.html" class="menu-item">why</a>
+        <a href="/WHAT.html" class="menu-item">what</a>
+        <a href="why.html" class="menu-item">why</a>
     </div>
     <div class="site-title">WEIGHTLISTED</div>
     <div class="slogan">your vision, our code</div>
@@ -973,5 +973,6 @@
 </body>
 
 </html>
+
 
 
