Fix HTML content and improve phrasing

--- a/who.html
+++ b/who.html
@@ -191,7 +191,7 @@
                 resonate with the future.</p>
 
             <p>Each member brings a unique perspective to the table - from AI enthusiasts to blockchain pioneers, from
-                UX visionaries to backend architects. Together, we form a symphony of technical expertise and creative
+                UX visionaries architects. Together, we form a symphony of technical expertise and creative
                 innovation.</p>
 
             <p>We operate at the intersection of technology and art, where every line of code is a brushstroke on the
@@ -200,7 +200,7 @@
 
             <p>At <span class="highlight fadein-weightlisted">WEIGHTLISTED</span>, we don't just build websites - we
                 create digital sanctuaries
-                where ideas flourish and possibilities are limitless.</p>
+                where ideas flourish and possibilities are limitless. We're here to make you business not only have a website, but a website that stands out.</p>
         </div>
     </div>
 
