href to mail and number

--- a/index.html
+++ b/index.html
@@ -876,8 +876,8 @@
     <div class="footer-section">
         <div class="contact-info">
             <h3>Contact Us</h3>
-            <p>WEIGHTLISTED@GMAIL.COM</p>
-            <p>470-365-9019</p>
+            <p><a href="mailto:WEIGHTLISTED@GMAIL.COM" style="color:inherit;text-decoration:underline;">WEIGHTLISTED@GMAIL.COM</a></p>
+            <p><a href="tel:4703659019" style="color:inherit;text-decoration:underline;">470-365-9019</a></p>
         </div>
         <div class="footer-tagline">
             WEIGHTLISTED<br><span class="tagline">Your vision, our code</span>
@@ -974,3 +974,4 @@
 </body>
 
 </html>
+
