--- a/index.html
+++ b/index.html
@@ -877,7 +877,7 @@
         <div class="contact-info">
             <h3>Contact Us</h3>
             <p><a href="mailto:WEIGHTLISTED@GMAIL.COM" style="color:inherit;text-decoration:underline;">WEIGHTLISTED@GMAIL.COM</a></p>
-            <p><a href="tel:4703659019" style="color:inherit;text-decoration:underline;">470-365-9019</a></p>
+            <p>Carinne Tzurdecker</p>
         </div>
         <div class="footer-tagline">
             WEIGHTLISTED<br><span class="tagline">Your vision, our code</span>
@@ -974,4 +974,5 @@
 </body>
 
 </html>
+
 
